[gd_scene load_steps=4 format=3 uid="uid://d1ojgju21jqk0"]

[ext_resource type="Script" uid="uid://br8jybhejfht7" path="res://scenes/algorithm_slider/algorithm_slider.gd" id="1_bbfei"]
[ext_resource type="Texture2D" uid="uid://720rq6pccuy6" path="res://assets/arrow_up.png" id="2_7kobc"]
[ext_resource type="Texture2D" uid="uid://cf740g51nsj5f" path="res://assets/arrow_down.png" id="3_qfmsb"]

[node name="AlgorithmSlider" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_constants/separation = 8
script = ExtResource("1_bbfei")
shader = "gaussian_blur"

[node name="MoveUp" type="Button" parent="."]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
icon = ExtResource("2_7kobc")
expand_icon = true

[node name="MoveDown" type="Button" parent="."]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
icon = ExtResource("3_qfmsb")
expand_icon = true

[node name="AlgorithmName" type="Label" parent="."]
layout_mode = 2
text = "Algorithm"

[node name="ValueSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 2.0
step = 0.01

[node name="AppliedLabel" type="Label" parent="ValueSlider"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Applied shaders can no longer be changed."
horizontal_alignment = 1

[node name="ValueSpinBox" type="SpinBox" parent="."]
layout_mode = 2
max_value = 2.0
step = 0.01
allow_greater = true

[node name="RemoveButton" type="Button" parent="."]
layout_mode = 2
text = "Remove"

[connection signal="pressed" from="MoveUp" to="." method="_on_move_up_pressed"]
[connection signal="pressed" from="MoveDown" to="." method="_on_move_down_pressed"]
[connection signal="value_changed" from="ValueSlider" to="." method="_on_value_slider_value_changed"]
[connection signal="value_changed" from="ValueSpinBox" to="." method="_on_value_spin_box_value_changed"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_remove_button_pressed"]
